--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pug": "^2.0.3",
     "passport": "^0.4.0",
     "express-session": "^1.15.6",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "bcrypt": "^3.0.4"
   },
   "engines": {
     "node": "4.4.3"
