--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "passport": "^0.4.0",
     "express-session": "^1.15.6",
     "passport-local": "^1.0.0",
-    "bcrypt": "^3.0.4"
+    "bcrypt": "^3.0.4",
+    "passport-github": "^1.1.0"
   },
   "engines": {
     "node": "4.4.3"
